# atompack

./: .gitignore  .readthedocs.yaml  Cargo.toml  Makefile  README.md
.github/scripts/: coverage_summary.py
.github/workflows/: ci.yml  release.yml  wheels.yml
atompack/: Cargo.toml
atompack-py/: Cargo.toml  README.md  pyproject.toml
atompack-py/benchmarks/: README.md  atom_hdf5_soa.py  atom_lmdb.py  atom_lmdb_pickle.py  atompack_batch_benchmark.py  atompack_bestcase_read_benchmark.py  benchmark.py  convert_legacy_atompack.py  hdf5_tuned_experiment.py  memory_benchmark.py  memory_benchmark_results.json  plot_benchmark_report.py  plot_benchmark_story.py  release_blogpost.md  scaling_benchmark.py  write_benchmark.py
atompack-py/python/atompack/: __init__.py  __init__.pyi  _atompack_rs.pyi  ase_bridge.py  hub.py  hub.pyi
atompack-py/src/: database.rs  database_batch.rs  database_flat.rs  lib.rs  molecule.rs  molecule_helpers.rs  py_dtypes.rs  soa.rs
atompack-py/tests/: conftest.py  test_atom_molecule.py  test_database.py  test_from_ase.py  test_hf_upload_cli.py  test_hub.py  test_import_side_effects.py  test_stub_surface.py  test_throughput_smoke.py
atompack-py/tests/benchmarks/: conftest.py  test_atom_hdf5_soa.py  test_benchmark_ase_read_path.py  test_benchmark_ase_write_context.py  test_benchmark_cache_validation.py  test_benchmark_read_sample_defaults.py  test_convert_legacy_atompack.py  test_hdf5_tuned_experiment.py  test_lmdb_pickle_and_compare.py  test_memory_benchmark_paths.py  test_other_benchmark_populate_defaults.py  test_plot_benchmark_report.py  test_plot_benchmark_story.py  test_publication_surface.py  test_scaling_benchmark_ase_write_context.py  test_write_benchmark_lmdb_soa.py
atompack/examples/: basic_usage.rs
atompack/src/: atom.rs  compression.rs  lib.rs  types.rs
atompack/src/storage/: dtypes.rs  header.rs  index.rs  mod.rs  schema.rs  soa.rs
atompack/tests/: throughput_smoke.rs
docs/source/: about.rst  architecture.rst  conf.py  contributing.rst  getting-started.rst  huggingface.rst  index.rst  performance.rst  rust-api.rst  use-cases.rst
docs/source/_static/css/: custom.css  entalpic.css
docs/source/_static/js/: custom.js
docs/source/_templates/autoapi/: index.rst
docs/source/_templates/partials/: webfonts.html
