[workspace]
members = ["atompack", "atompack-py"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Ali Ramlaoui <ali.ramlaoui@entalpic.ai>"]
license = "Apache-2.0"
repository = "https://github.com/Entalpic/atompack"

[workspace.dependencies]
ndarray = "0.15"
bytemuck = { version = "1.14", features = ["derive"] }
memmap2 = "0.9"
rayon = "1.8"
thiserror = "1.0"

# Compression
zstd = "0.13"
lz4 = "1.24"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Python bindings
pyo3 = { version = "0.26", features = ["extension-module"] }
numpy = "0.26"
