[package]
name = "atompack"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ndarray.workspace = true
bytemuck.workspace = true
memmap2.workspace = true
rayon.workspace = true
thiserror.workspace = true
zstd.workspace = true
lz4.workspace = true
serde.workspace = true
bincode.workspace = true

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
rand = "0.8"
plotters = { version = "0.3", default-features = false, features = ["svg_backend"] }
